Commit final Semana 2

--- a/plantas/ui5.yaml
+++ b/plantas/ui5.yaml
@@ -19,4 +19,4 @@ builder:
   - name: webide-extension-task-resources
     afterTask: webide-extension-task-updateManifestJson
     configuration:
-      nameSpace: ovly/fiori50
+      nameSpace: ovly/T55/fiori50
