--- a/plantas/xs-app.json
+++ b/plantas/xs-app.json
@@ -6,7 +6,7 @@
       "authenticationType": "none",
       "csrfProtection": false,
       "source": "^/sap/opu/odata/sap/ZT55_50_APP_SRV/",
-      "destination": "ovly"
+      "destination": "ovly_cloud_conector"
     },
     {
       "source": "^(.*)$",
