--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,6 +20,26 @@
       ],
       "envFile": "${workspaceFolder}/alunos/.env5",
       "preLaunchTask": "Build alunos"
+    },
+    {
+      "name": "Run plantas",
+      "type": "node",
+      "request": "launch",
+      "program": "${workspaceFolder}/plantas/node_modules/@sap/html5-repo-mock/index.js",
+      "cwd": "${workspaceFolder}/plantas",
+      "env": {
+        "PORT": "6004",
+        "MOCK_LOOKUP_DIRS": "[\"webapp\"]",
+        "run.config": "{\"handlerId\":\"ui5_flat_run_config_handler_id\",\"runnableId\":\"/home/user/projects_fiorifullstack/plantas\"}"
+      },
+      "args": [
+        "--standalone",
+        "/ovlyT55fiori50plantas/test.html",
+        "--ui5",
+        "{\"version\":\".\"}"
+      ],
+      "envFile": "${workspaceFolder}/plantas/.env6",
+      "preLaunchTask": "Build plantas"
     }
   ]
 }
