--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,5 +1,11 @@
 {
-  "version": "0.2.0",
+  "inputs": [
+    {
+      "id": "UI5Version",
+      "type": "command",
+      "command": "sap.ux.appGenerator.ui5Version"
+    }
+  ],
   "configurations": [
     {
       "name": "Run alunos",
@@ -40,6 +46,69 @@
       ],
       "envFile": "${workspaceFolder}/plantas/.env6",
       "preLaunchTask": "Build plantas"
+    },
+    {
+      "name": "Start minhas_compras",
+      "type": "node",
+      "request": "launch",
+      "runtimeExecutable": "npm",
+      "cwd": "/home/user/projects_fiorifullstack/minhas_compras",
+      "windows": {
+        "runtimeExecutable": "npm.cmd"
+      },
+      "runtimeArgs": [
+        "run-script",
+        "start"
+      ],
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen",
+      "port": 9229,
+      "env": {
+        "DEBUG": "--inspect",
+        "run.config": "{\"handlerId\":\"fiori_tools\",\"runnableId\":\"/home/user/projects_fiorifullstack/minhas_compras\"}"
+      }
+    },
+    {
+      "name": "Start minhas_compras Mock",
+      "type": "node",
+      "request": "launch",
+      "cwd": "/home/user/projects_fiorifullstack/minhas_compras",
+      "runtimeExecutable": "npm",
+      "windows": {
+        "runtimeExecutable": "npm.cmd"
+      },
+      "runtimeArgs": [
+        "run-script",
+        "start-mock"
+      ],
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen",
+      "port": 9229,
+      "env": {
+        "run.config": "{\"handlerId\":\"fiori_tools\",\"runnableId\":\"/home/user/projects_fiorifullstack/minhas_compras\"}"
+      }
+    },
+    {
+      "name": "Start minhas_compras Local",
+      "type": "node",
+      "request": "launch",
+      "cwd": "/home/user/projects_fiorifullstack/minhas_compras",
+      "runtimeExecutable": "npm",
+      "windows": {
+        "runtimeExecutable": "npm.cmd"
+      },
+      "runtimeArgs": [
+        "run-script",
+        "start-local"
+      ],
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen",
+      "port": 9229,
+      "env": {
+        "run.config": "{\"handlerId\":\"fiori_tools\",\"runnableId\":\"/home/user/projects_fiorifullstack/minhas_compras\"}"
+      }
     }
-  ]
+  ],
+  "compounds": [],
+  "version": "0.2.0"
 }
